# TaskPilot

./: .gitignore  AGENTS.md  IDENTITY.md  README.md  SKILL.md  SOUL.md  TaskPilot架构图.md  USER.md  config.yaml  pyproject.toml
.claude/: settings.local.json
diagrams/2026-04-23T220900/: analytics.mmd  arch.mmd  decompose.mmd  heartbeat-seq.mmd  modules.mmd  mood.mmd  multiproject.mmd  report-flow.mmd  task-flow.mmd  triggers.mmd
docs/: taskpilot-v03-design.md
docs/superpowers/specs/: 2026-04-09-taskpilot-design.md
taskpilot/: __init__.py  __main__.py  cli.py  config.py  dida_bridge.py  progress.py  reporter.py  state.py  task_ops.py
taskpilot/templates/: report.md
